# Bindu

./: .pre-commit-config.yaml  .secrets.baseline  LICENSE.md  README.bn.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.md  README.nl.md  README.ta.md  README.zh.md  api-collection.json  maintainers.md  openapi.yaml  pyproject.toml
.github/: contributing.md
.github/workflows/: readme-consistency.yml  release.yml
alembic/versions/: 20260119_0001_add_schema_support.py
bindu/: settings.py
bindu/auth/: __init__.py
bindu/auth/hydra/: __init__.py  client.py  registration.py
bindu/auth/kratos/: __init__.py
bindu/extensions/did/: did_agent_extension.py
bindu/extensions/x402/: __init__.py  lightning.py  networks.py  x402_agent_extension.py
bindu/observability/: sentry.py
bindu/penguin/: __init__.py  bindufy.py  config_validator.py
bindu/server/: applications.py
bindu/server/endpoints/: a2a_protocol.py  agent_card.py  did_endpoints.py  health.py  metrics.py  negotiation.py  oauth_endpoints.py  payment_sessions.py  skills.py  utils.py
bindu/server/handlers/: message_handlers.py
bindu/server/middleware/: metrics.py  rate_limit.py
bindu/server/middleware/auth/: hydra.py
bindu/server/middleware/x402/: __init__.py  network_router.py  x402_middleware.py
bindu/server/notifications/: push_manager.py
bindu/server/scheduler/: __init__.py  base.py  factory.py  memory_scheduler.py  redis_scheduler.py
bindu/server/storage/: memory_storage.py  postgres_storage.py
bindu/server/storage/helpers/: __init__.py  db_operations.py  normalization.py  security.py  serialization.py  validation.py
bindu/server/workers/: base.py  manifest_worker.py
bindu/server/workers/helpers/: __init__.py
bindu/utils/: exceptions.py  hybrid_auth_client.py  readme_consistency.py  request_utils.py  retry.py  schema_manager.py  task_telemetry.py  token_utils.py  tracing.py  vault_client.py  worker_utils.py
bindu/utils/config/: base.py  env_loader.py  settings.py
bindu/utils/http/: __init__.py  client.py
docs/: AUTHENTICATION.md  DID.md  HEALTH_METRICS.md  NEGOTIATION.md  NOTIFICATIONS.md  OBSERVABILITY.md  SCHEDULER.md  SKILLS.md  STORAGE.md  TUNNELING.md
docs/grpc/: README.md  SUMMARY.md  client.md  limitations.md  overview.md  sdk-development.md  sdk-typescript.md
examples/: README.md  agno_simple_example.py  beginner_zero_config_agent.py  premium_advisor.py  zk_policy_agent.py
examples/ag2_research_team/: README.md  main.py
examples/beginner/: .env.example  ag2_simple_example.py  agno_example.py  agno_notion_agent.py  agno_simple_example.py  beginner_zero_config_agent.py  dspy_agent.py  echo_simple_agent.py  faq_agent.py
examples/document-analyzer/skills/document-processing/: skill.yaml
examples/langgraph_blog_writing_agent/: .env.example  README.md  graph.py  main.py  schemas.py  skill.yaml
examples/langgraph_blog_writing_agent/skills/Blog_writing_agent/: skill.yaml
examples/premium-advisor/: README.md  premium_advisor.py
examples/premium-advisor/skills/premium-market-insight-skill/: skill.yaml
examples/skills/zk-policy/: skill.yaml
examples/speech-to-text/: .env.example  speech_to_text_agent.py
examples/speech-to-text/skills/speech-recognition/: skill.yaml
examples/typescript-langchain-agent/: README.md
examples/typescript-langchain-agent/skills/research/: SKILL.md  skill.yaml
frontend/: .env  .gitignore
frontend/src/lib/components/: Footer.svelte
frontend/src/lib/constants/: settings.ts
frontend/src/lib/server/: usageLimits.ts
frontend/src/lib/server/endpoints/: images.ts
frontend/src/lib/server/endpoints/bindu/: types.ts
frontend/src/lib/types/: Settings.ts
frontend/src/lib/utils/: agentMessageHandler.ts
frontend/src/routes/api/v2/user/settings/: +server.ts
frontend/src/routes/conversation/[id]/: +page.svelte  +server.ts
frontend/src/routes/login/callback/: updateUser.spec.ts  updateUser.ts
frontend/src/routes/settings/(nav)/: +server.ts
release-notes/: 2026.12.5.txt  2026.3.3.txt  2026.6.6.txt
scripts/: check_readme_consistency.py
tests/: conftest.py
tests/integration/: test_hybrid_authentication.py  test_hydra_integration.py
tests/integration/grpc/: test_grpc_e2e.py
tests/unit/: test_a2a_endpoint.py  test_capabilities.py  test_did_setup.py  test_did_utils.py  test_document_analyzer.py  test_hydra_client_simple.py  test_hydra_registration.py  test_message_handlers.py  test_protocol_types.py  test_rate_limiting.py  test_readme_consistency.py  test_redis_scheduler.py  test_security.py  test_sentry.py  test_storage_security.py  test_storage_validation.py  test_stream_message.py  test_task_manager.py  test_token_utils.py  test_vault_integration.py  test_web_scraping_agent.py  test_x402_constants.py  test_x402_lightning.py  test_x402_networks.py  test_x402_utils.py
