[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bindu"
dynamic = ["version"]
description = "A protocol framework for agent-to-agent communication"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Raahul Dutta", email = "raahul@getbindu.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
    # Core runtime
    "uvicorn>=0.35",
    "starlette==0.48.0",
    "pydantic>=2.11.7",
    "loguru==0.7.3",
    "rich==14.3.2",
    "orjson==3.10.18",
    "cryptography==44.0.2",
    "base58==2.1.1",
    "pyjwt[crypto]==2.10.1",
    "httpx==0.28.1",
    "aiofiles==24.1.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "tenacity==9.1.4",
    "pynacl==1.5.0",
    "numpy==2.3.5",
    # Telemetry
    "opentelemetry-api==1.35.0",
    "opentelemetry-sdk==1.35.0",
    "opentelemetry-exporter-otlp==1.35.0",
    "opentelemetry-exporter-otlp-proto-http==1.35.0",
    "opentelemetry-instrumentation-fastapi==0.56b0",
    "opentelemetry-instrumentation-httpx==0.56b0",
    "sentry-sdk==2.41.0",
    # x402 payments
    "x402==0.2.1",
    "web3==7.13.0",
    "eth-account==0.13.7",
    "cdp-sdk==0.21.0",
    # Database storage
    "sqlalchemy[asyncio]==2.0.44",
    "asyncpg==0.31.0",
    "alembic==1.17.2",
    "redis==7.1.0",
    # CLI tools
    "cookiecutter==2.6.0",
    "pyperclip==1.11.0",
    # Security
    "detect-secrets==1.5.0",
    "python-dotenv>=1.1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
# Agent frameworks and tools for examples (use: pip install bindu[agents])
agents = [
    "agno>=2.5.2",
    "langchain>=1.2.9",
    "langchain-openai>=1.1.8",
    "langgraph>=1.0.8",
    "ollama>=0.6.1",
    "duckduckgo-search>=8.1.1",
    "openrouter>=0.6.0",
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
]

# Minimal core only (use: pip install bindu[core] --only-deps)
core = [
    "uvicorn>=0.35",
    "starlette==0.48.0",
    "pydantic>=2.11.7",
    "loguru==0.7.3",
    "rich==14.3.2",
    "orjson==3.10.18",
    "cryptography==44.0.2",
    "base58==2.1.1",
    "pyjwt[crypto]==2.10.1",
    "httpx==0.28.1",
    "aiofiles==24.1.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "tenacity==9.1.4",
    "pynacl==1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["bindu"]

[tool.hatch.build.targets.sdist]
include = [
    "bindu",
    "README.md",
    "assets/*"
]

[dependency-groups]
dev = [
    "bindu",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.0.0",
    "pre-commit>=3.0.0",
    "ty>=0.0.1a14",
    "types-requests>=2.32.0.20250328",
    "pipreqs>=0.5.0",
    "twine>=6.1.0",
    "uvx<4.0",
    "ruff>=0.15.0",
]

[tool.coverage.run]
source = ["bindu"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.3.14"

[tool.hatch.build.hooks.vcs]
version-file = "bindu/_version.py"
